objects/TW1_Fidelidade__c.object
<CustomObject>
    <fields>
        <fullName>Acao_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marcado quando o Marketing torna o cliente Platinum manualmente.</inlineHelpText>
        <label>Ação Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Ajuste_de_Saldo__c</fullName>
        <label>Ajuste de Saldo</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ajuste de Saldo</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Bonus_Aniversario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bônus Aniversário</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Debito_Cartao_Estacionamento__c</fullName>
        <label>Débito Cartão Estacionamento</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cartão Estacionamento</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Historico__c</fullName>
        <label>Histórico</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cadastro de NTFS</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Modalidade__c</fullName>
        <label>Modalidade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Nome_Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nome do Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fidelidade</relationshipLabel>
        <relationshipName>Fidelidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Perdidos__c</fullName>
        <label>Perdidos</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Nota Expirada</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo__c</fullName>
        <label>Saldo</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_inicial__c</fullName>
        <label>Saldo inicial</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Saldo Inicial</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Fidelidade</relationshipLabel>
        <relationshipName>Fidelidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Utilizado__c</fullName>
        <label>Utilizado</label>
        <summarizedField>TW1_Historico__c.TW1_Pontos__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Historico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cartão Estacionamento, Vinho</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vinhos_diarios__c</fullName>
        <label>Vinhos diários</label>
        <summaryFilterItems>
            <field>TW1_Historico__c.TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>Vinho</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TW1_Historico__c.TW1_Taca_de_vinho_hoje_del__c</field>
            <operation>equals</operation>
            <value>Sim</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Historico__c.TW1_Fidelidade__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Fidelidade</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número Fidelidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fidelidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TW1_VR_Fidelidade_Criar_Prospect</fullName>
        <active>false</active>
        <description>Evita que o registro de Fidelidade seja criado com modalidade diferente de prospect.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(TW1_Modalidade__c, &quot;Prospect&quot;))</errorConditionFormula>
        <errorMessage>O registro de fidelidade não pode ser criado com modalidade diferente de &quot;Prospect&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Fidelidade_Duplicidade</fullName>
        <active>false</active>
        <description>Validação para não permitir que um usuário possa criar mais de um registro de Fidadelidade para um mesmo cliente.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISBLANK(TW1_Nome_Cliente__r.TW1_Fidelidade__c))</errorConditionFormula>
        <errorMessage>Esse cliente já possui cadastro de Fidelidade. Não é possível criar um novo registro.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Fidelidade_Impede_marcar_AcaoMark</fullName>
        <active>false</active>
        <description>Quando um usuário tentar acionar o botão &quot;Tornar Platinum&quot; e ele não for do perfil &quot;Marketing&quot; a validação impede da atualização seja realizada.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &quot;Marketing&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;Administrador do sistema&quot; &amp;&amp; ISCHANGED(Acao_Marketing__c) &amp;&amp; Acao_Marketing__c = True</errorConditionFormula>
        <errorMessage>Somente usuário do Marketing podem tonar um usuário Platinum manualmente.</errorMessage>
    </validationRules>
</CustomObject>